Modified project settings

--- a/project.config
+++ b/project.config
@@ -2,3 +2,6 @@
 	inheritFrom = All-Projects
 [project]
 	state = active
+	description = Dummy project for testing eclipse integration with Gerrit and github
+[receive]
+	requireChangeId = true
